# gaphor_plugin_laravel

./: .gitignore  README.md  pyproject.toml  run-gaphor.sh
gaphor_plugin_laravel/: __init__.py
